@@ -42,7 +42,8 @@ enum HttpMethod {
   HTTP_METHOD_OPTIONS,
   HTTP_METHOD_PURGE,
   HTTP_METHOD_PUT,
-  HTTP_METHOD_TRACE
+  HTTP_METHOD_TRACE,
+  HTTP_METHOD_PUSH
 };
 
 /**
